Quartz sync: Sep 9, 2024, 8:27 PM